[package]
name = "octo_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.10", features = ["blocking"]}
error-chain = {version = "0.12.4"}
serde_json = {version ="1.0"}
dotenv = {version = "0.15.0"}
